<resources>
    <string name="empty"> </string>
    <string name="add_to_playlist_title">Add to playlist</string>
    <string name="show_archived">Show archived</string>
    <string name="no_playlists_found">No playlists found</string>
    <string name="save">Save</string>
    <string name="app_name" translatable="false">Tunaro</string>
    <string name="playback_channel_name">Playback</string>
    <string name="playback_channel_description">Media controls while Tunaro is steering playback</string>
    <string name="notif_previous">Previous</string>
    <string name="notif_play">Play</string>
    <string name="notif_pause">Pause</string>
    <string name="notif_next">Next</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="spotifyButton">Get Display Name</string>
    <string name="authSwitch">Authenticated</string>
    <string name="controlSwitch">Spotify App Remote Control</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="library">Library</string>
    <string name="rankings">Rankings</string>

    <string name="playlistCoverImage">Playlist Cover Image</string>
    <string name="songAlbumCoverImage">Song Album Cover Image</string>
    <string name="albumLabel">Album</string>
    <string name="songDuration">Duration</string>
    <string name="songViewTabsDesc">Notes / Snippets Tabs</string>

    <string name="logged_in_as">Logged in as %s</string>
    <string name="playlist_count">%d Playlists</string>
    <string name="song_count">%d Tracks</string>

    <string name="songViewDescription">Add notes/details to this song</string>

    <string name="add_snippet">Add Snippet</string>
    <string name="notes_tab">Notes</string>
    <string name="snippets_tab">Snippets</string>
    <string name="notes">Notes</string>
    <string name="toggle_snippet_playback">Toggle Snippet Playback</string>
    <string name="cycle_snippet_end_mode">Cycle snippet end behaviour: stop, loop, continue</string>

    <string name="popularity_value">%d%%</string>
    <string name="more_details_url">https://songstats.com/</string>
</resources>